--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ section {
     text-align: center;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 20px;
+    margin-top:20px;
 }
 
 @keyframes rotate {
