--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 body {
     background-color: rgb(238, 238, 238);
     overflow-x: hidden;
+    
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -27,6 +28,7 @@ section {
     height: 100vh;
     width: 100%;
     border-bottom: 1px solid gray;
+    padding-bottom:10px;
 }
 
 .paragraph {
