--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ body {
         scroll-behavior: smooth;
     }
 }
-
+.icon:hover {
+    transform: rotate(-2deg) translateY(-5px) scale(1.025);
+}
 .completeName {
     font-size: 90px;
     font-family: 'Oswald', sans-serif;
